--- a/Hawk.ETL.Controls/TaskManagerView.xaml
+++ b/Hawk.ETL.Controls/TaskManagerView.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mvvm="clr-namespace:Hawk.Core.Utils.MVVM;assembly=Hawk.Core" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" x:Class="Hawk.ETL.Controls.TaskManagerView"
-             d:DesignWidth="363.5" d:DesignHeight="146">
+             d:DesignWidth="372.833" d:DesignHeight="278.333">
 	<UserControl.Resources>
 		  <mvvm:BindingProxy x:Key="BindingProxy" Data="{Binding}"/>
         <Style    TargetType="{x:Type MenuItem}" BasedOn="{StaticResource {x:Type MenuItem}}">
@@ -60,6 +60,12 @@
 			<Button Style="{DynamicResource miniButton}" DataContext="{Binding [3]}" />  	
 			<Button Style="{DynamicResource miniButton}" DataContext="{Binding [4]}" />  	
 		</StackPanel>
+		<Rectangle Height="80" VerticalAlignment="Bottom" Opacity="0.2" Width="80" HorizontalAlignment="Right" Margin="0,0,0,20" >
+			<Rectangle.Fill>
+				<VisualBrush Stretch="Fill"
+					Visual="{Binding ConverterParameter=hourglass, Converter={StaticResource MetroConverter}, Mode=OneWay}"  />
+			</Rectangle.Fill>
+		</Rectangle>
     	 
             
 	</Grid>
