--- a/Hawk.ETL.Controls/XPathDetector.xaml
+++ b/Hawk.ETL.Controls/XPathDetector.xaml
@@ -1,16 +1,62 @@
-﻿<UserControl x:Class="Hawk.ETL.Controls.XPathDetector"
+﻿<UserControl
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Hawk.ETL.Controls"
+             xmlns:System_Windows_Controls_WpfPropertyGrid="clr-namespace:System.Windows.Controls.WpfPropertyGrid;assembly=System.Windows.Controls.WpfPropertyGrid" x:Class="Hawk.ETL.Controls.XPathDetector"
              mc:Ignorable="d" 
-             d:DesignHeight="331.542" d:DesignWidth="619.626">
+             d:DesignHeight="331.542" d:DesignWidth="619.626"  Background="{DynamicResource NormalBrush}">
+    <UserControl.Resources>
+        <DataTemplate x:Key="DataTemplate1">
+            <StackPanel Margin="0,5">
+                <TextBlock Margin="0" TextWrapping="Wrap" Text="{Binding XPath}" FontSize="18"/>
+                <TextBlock Margin="0" TextWrapping="Wrap" Text="{Binding SampleData1}"/>
+            </StackPanel>
+        </DataTemplate>
+    </UserControl.Resources>
     <Grid>
-    	<Grid.ColumnDefinitions>
-    		<ColumnDefinition Width="0.47*"/>
-    		<ColumnDefinition Width="0.53*"/>
-    	</Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition Height="100"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="0.47*"/>
+            <ColumnDefinition Width="100"/>
+            <ColumnDefinition Width="0.388*"/>
+        </Grid.ColumnDefinitions>
+        <TextBox x:FieldModifier="public" x:Name="HtmlTextBox" Text="{Binding URLHTML}"  
+    		ScrollViewer.CanContentScroll="True" TextWrapping="WrapWithOverflow" Margin="8,46,8,8"
+    		VerticalScrollBarVisibility="Auto"
+    		Background="{DynamicResource NormalBorderBrush}" Grid.RowSpan="2" />
+        <ScrollViewer Grid.ColumnSpan="2" Grid.Column="1" Margin="8,13.568,12.487,0" Grid.RowSpan="2">
+        	<StackPanel>
+        		<Grid Height="25.672"  >
+        			<TextBlock Margin="0,4.432,0,6" TextWrapping="Wrap" Text="{DynamicResource key_764}" HorizontalAlignment="Left" Width="84" d:LayoutOverrides="Height" VerticalAlignment="Center" />
+
+        			<TextBox Margin="112,4.432,47.263,4" TextWrapping="Wrap"
+        				Text="{Binding SelectText}" System_Windows_Controls_WpfPropertyGrid:TextBoxExtender.CommitOnEnter="True"
+        				d:LayoutOverrides="Height" VerticalAlignment="Center" />
+        			<Button  DataContext="{Binding Commands[0]}" Content="{Binding Text}" Command="{Binding}" HorizontalAlignment="Right" Width="41.5" VerticalAlignment="Center" />
+        		</Grid>
+        		<ListBox  SelectedItem="{Binding SelectedItem}"   ItemsSource="{Binding CrawlItems}" ItemTemplate="{DynamicResource DataTemplate1}" Margin="8"/>
+        		<Grid Height="25.672" Margin="0,30,0,0"  >
+        			<TextBlock Margin="0,0,0,2" TextWrapping="Wrap" Text="{DynamicResource key_765}" HorizontalAlignment="Left" Width="84" d:LayoutOverrides="Height" VerticalAlignment="Center" />
+        			<TextBox Margin="112,0,45.5,0" TextWrapping="Wrap"
+        				Text="{Binding XPath}" System_Windows_Controls_WpfPropertyGrid:TextBoxExtender.CommitOnEnter="True"
+        				d:LayoutOverrides="Height" VerticalAlignment="Center" />
+        			<Button  DataContext="{Binding Commands[1]}" Content="{Binding Text}" Command="{Binding}" HorizontalAlignment="Right" Width="41.5" VerticalAlignment="Center" />
+        		</Grid>
+        		<ListBox     ItemsSource="{Binding ChildItems}" ItemTemplate="{DynamicResource DataTemplate1}" Margin="8"/>
+         
+        		<StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,30,0,0">
+        			<Button  DataContext="{Binding Commands[2]}" Content="{Binding Text}" Command="{Binding}" Margin="15,0,0,0" />
+
+        			<Button  DataContext="{Binding Commands[3]}" Content="{Binding Text}" Command="{Binding}" Margin="15,0,0,0" />
+        		</StackPanel>
+        	</StackPanel>
+        </ScrollViewer>
+        <TextBlock Margin="10,18,191,0" TextWrapping="Wrap" Text="{DynamicResource key_760}" VerticalAlignment="Top" />
 
     </Grid>
 </UserControl>
