--- a/Hawk/Lang/en-US.xaml
+++ b/Hawk/Lang/en-US.xaml
@@ -1,4 +1,4 @@
-<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+ï»¿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:system="clr-namespace:System;assembly=mscorlib">
     <system:String x:Key="key">
@@ -766,7 +766,7 @@
 
     </system:String>
     <system:String x:Key="key_776">
-        {Binding Attributeï¼?Converter={StaticResource GroupConverter}}
+        {Binding Attributeï¿½?Converter={StaticResource GroupConverter}}
 
     </system:String>
     <system:String x:Key="key_287">
@@ -986,7 +986,7 @@
 
     </system:String>
     <system:String x:Key="key_778">
-        {Binding GenerateModeï¼?Converter={StaticResource GeneratorConverter}}
+        {Binding GenerateModeï¿½?Converter={StaticResource GeneratorConverter}}
 
     </system:String>
     <system:String x:Key="key_655">
@@ -1426,7 +1426,7 @@
 
     </system:String>
     <system:String x:Key="key_205">
-        Document list
+        HtmlDoc list
 
     </system:String>
     <system:String x:Key="key_415">
@@ -1813,7 +1813,7 @@
         Double click the icon to create a new task
 
     </system:String>
-    <system:String x:Key="FreeDocument_desc">
+    <system:String x:Key="FreeHtmlDoc_desc">
         Free documents that can store the form of a key value pair
 
     </system:String>
@@ -2202,7 +2202,7 @@
 
     </system:String>
     <system:String x:Key="key_716">
-        {Binding Process.Attributeï¼?Converter={StaticResource GroupConverter}}
+        {Binding Process.Attributeï¿½?Converter={StaticResource GroupConverter}}
 
     </system:String>
     <system:String x:Key="key_359">
@@ -2577,7 +2577,7 @@
         Capture the target
 
     </system:String>
-    <system:String x:Key="FreeDocument">
+    <system:String x:Key="FreeHtmlDoc">
         Free document
 
     </system:String>
